refactor: 보고서 비교 UI 개선 및 XSS 방지
- DOMPurify를 추가하여 마크다운 변환 내용의 XSS 취약점 방지
- 템플릿 리터럴을 통해 비교 UI 코드 가독성 향상
- 기존 마크다운 파싱만 수행하던 로직에 정화(sanitize) 과정 추가
- fragments.html에 DOMPurify 스크립트 추가

--- a/src/main/resources/templates/layout/fragments.html
+++ b/src/main/resources/templates/layout/fragments.html
@@ -4,6 +4,7 @@
 <!-- Navbar Fragment -->
 <nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-dark sticky-top">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.6/purify.min.js"></script>
     <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/api.js}"></script>
     <div class="container-fluid">
